src/tests/routes/crates/snapshots/all__routes__crates__read__new_name.snap
---
source: src/tests/routes/crates/read.rs
expression: response.json()
---
{
  "categories": null,
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": null,
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "new",
    "keywords": null,
    "links": {
      "owner_team": "https://crates.io/api/v1/crates/new/owner_team",
      "owner_user": "https://crates.io/api/v1/crates/new/owner_user",
      "owners": "https://crates.io/api/v1/crates/new/owners",
      "reverse_dependencies": "https://crates.io/api/v1/crates/new/reverse_dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/new/downloads",
      "versions": "https://crates.io/api/v1/crates/new/versions"
    },
    "max_stable_version": null,
    "max_version": "0.0.0",
    "name": "new",
    "newest_version": "0.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "keywords": null,
  "versions": null
}
