src/tests/routes/crates/snapshots/all__routes__crates__read__show.snap
---
source: src/tests/routes/crates/read.rs
expression: response.json()
---
{
  "categories": [],
  "crate": {
    "badges": [],
    "categories": [],
    "created_at": "[datetime]",
    "description": "description",
    "documentation": "https://example.com",
    "downloads": 20,
    "exact_match": false,
    "homepage": "http://example.com",
    "id": "foo_show",
    "keywords": [
      "kw1"
    ],
    "links": {
      "owner_team": "https://crates.io/api/v1/crates/foo_show/owner_team",
      "owner_user": "https://crates.io/api/v1/crates/foo_show/owner_user",
      "owners": "https://crates.io/api/v1/crates/foo_show/owners",
      "reverse_dependencies": "https://crates.io/api/v1/crates/foo_show/reverse_dependencies",
      "version_downloads": "https://crates.io/api/v1/crates/foo_show/downloads",
      "versions": null
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_show",
    "newest_version": "0.5.1",
    "recent_downloads": 10,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": [
      1,
      3,
      2
    ]
  },
  "keywords": [
    {
      "crates_cnt": 1,
      "created_at": "[datetime]",
      "id": "kw1",
      "keyword": "kw1"
    }
  ],
  "versions": [
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_show",
      "crate_size": 0,
      "created_at": "[datetime]",
      "dl_path": "https://crates.io/api/v1/crates/foo_show/1.0.0/download",
      "downloads": 0,
      "features": {},
      "has_lib": null,
      "id": 1,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "https://crates.io/api/v1/crates/foo_show/1.0.0/authors",
        "dependencies": "https://crates.io/api/v1/crates/foo_show/1.0.0/dependencies",
        "version_downloads": "https://crates.io/api/v1/crates/foo_show/1.0.0/downloads"
      },
      "num": "1.0.0",
      "published_by": null,
      "readme_path": "https://crates.io/api/v1/crates/foo_show/1.0.0/readme",
      "rust_version": null,
      "updated_at": "[datetime]",
      "yanked": false
    },
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_show",
      "crate_size": 0,
      "created_at": "[datetime]",
      "dl_path": "https://crates.io/api/v1/crates/foo_show/0.5.1/download",
      "downloads": 0,
      "features": {},
      "has_lib": null,
      "id": 3,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "https://crates.io/api/v1/crates/foo_show/0.5.1/authors",
        "dependencies": "https://crates.io/api/v1/crates/foo_show/0.5.1/dependencies",
        "version_downloads": "https://crates.io/api/v1/crates/foo_show/0.5.1/downloads"
      },
      "num": "0.5.1",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "https://crates.io/api/v1/crates/foo_show/0.5.1/readme",
      "rust_version": null,
      "updated_at": "[datetime]",
      "yanked": false
    },
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "foo_show",
      "crate_size": 0,
      "created_at": "[datetime]",
      "dl_path": "https://crates.io/api/v1/crates/foo_show/0.5.0/download",
      "downloads": 0,
      "features": {},
      "has_lib": null,
      "id": 2,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "https://crates.io/api/v1/crates/foo_show/0.5.0/authors",
        "dependencies": "https://crates.io/api/v1/crates/foo_show/0.5.0/dependencies",
        "version_downloads": "https://crates.io/api/v1/crates/foo_show/0.5.0/downloads"
      },
      "num": "0.5.0",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "https://crates.io/api/v1/crates/foo_show/0.5.0/readme",
      "rust_version": null,
      "updated_at": "[datetime]",
      "yanked": false
    }
  ]
}
